# iadevs

./: .gitignore  pyproject.toml
week-1/src/: cleaning_text_component.py  summarize_text_component.py
